<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#86cb92"
    tools:context="com.piqqie.httpwww.myapplication.LoginActivity"
    android:theme="@style/PiQQie_Theme.NoActionBar"
    android:transitionGroup="true">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40mm"
                android:layout_height="35mm"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/imageView"
                android:src="@drawable/logo"
                android:layout_gravity="center_horizontal" />

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_gravity="center_horizontal"
                android:layout_width="50mm"
                android:layout_height="7mm"
                android:background="#86cb92"
                android:hint="@string/prompt_email"
                android:textColorHint="#ffffff"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="#ffffff"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor"
                android:layout_marginTop="20dp" />

            <EditText
                android:id="@+id/password"
                android:layout_gravity="center_horizontal"
                android:layout_width="50mm"
                android:layout_height="7mm"
                android:hint="@string/prompt_password"
                android:background="#86cb92"
                android:textColorHint="#ffffff"
                android:textSize="15sp"
                android:textStyle="normal"
                android:textColor="#ffffff"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor"
                android:singleLine="true" />

            <Button
                android:id="@+id/log_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="50mm"
                android:layout_height="7mm"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:background="#93dda0"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:text="LOG IN"
                android:textSize="15dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/create_an_account"
                style="?android:textAppearanceSmall"
                android:layout_width="52mm"
                android:layout_height="6mm"
                android:background="@null"
                android:layout_marginTop="75dp"
                android:text="@string/action_create_account"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal"/>

            <Button
                android:id="@+id/forgot_password"
                style="?android:textAppearanceSmall"
                android:layout_width="52mm"
                android:layout_height="6mm"
                android:background="@null"
                android:layout_marginTop="0dp"
                android:text="@string/action_forgot_password"
                android:textSize="15dp"
                android:textColor="#ffffff"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>